--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ imgaug==0.2.9
 matplotlib==3.2.2
 numpy==1.19.5
 opencv-python==4.1.2.30
-sklearn==0.0
+scikit-learn==0.22.2.post1
 tensorflow==2.4.1
